# googly

./: .env.example  .gitignore  Makefile  agent.py  app.py  compose.yml  main.py  pyproject.toml  settings.py  skills-lock.json  streamlit_app.py  styles.css  test_api_comprehensive.py
agents/: basic_agent.py
agents/multi/: executor.py  planner.py  supervisor.py
apps/api/: alembic.ini  create_test_project.py  pyproject.toml  run_test.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_user_id_text.py  003_project_source_toggles.py  004_chat_messages.py  005_chat_messages_rls.py  006_knowledge_chunks_rls_with_check.py  007_project_tool_toggles.py  008_project_social_source_toggles.py  009_fulltext_source_assets.py  009_projects_metadata_jsonb.py  011_hnsw_index.py  012_add_knowledge_documents.py  013_backfill_null_document_ids.py  014_kb_chunk_count_trigger.py  015_knowledge_chunks_document_id_not_null.py  016_enriched_description.py  016_project_insights.py  017_cluster_followup_messages.py  0e0440875e08_merge_heads_after_015.py
apps/api/app/: main.py
apps/api/app/agents/: cluster_followup.py  insight_generator.py  intent.py  orchestrator.py  patent.py  project_relevance.py  query_enhancer.py  research.py  search_fallback.py  synthesis.py  trend.py
apps/api/app/api/: ownership.py
apps/api/app/api/v1/: chat.py  cluster_followup.py  insights.py  kb.py  projects.py  users.py
apps/api/app/core/: arq.py  auth.py  cache.py  cache_invalidation.py  cache_keys.py  cache_version.py  circuit.py  circuit_breaker.py  config.py  constants.py  db.py  dedup.py  dedup_papers.py  external_cache.py  http.py  logging_setup.py  metrics.py  middleware.py  normalize.py  openai_client.py  paper_schema.py  query_policy.py  query_sanitize.py  rate_limiter.py  redis.py  retry.py  serialization.py  url_safety.py  user_rate_limiter.py  utils.py
apps/api/app/kb/: chunker.py  embedder.py  ingester.py  intent_extractor.py  retriever.py
apps/api/app/models/: entities.py  schemas.py
apps/api/app/repositories/: chat_history.py  cluster_followup_history.py  health.py  insights.py  knowledge.py  project.py  source_asset.py
apps/api/app/services/: __init__.py  chat.py  cluster_followup.py  fulltext_extractor.py  fulltext_mapper.py  fulltext_resolver.py  fulltext_types.py  insights.py  kb.py  llm.py  project.py  project_discover.py  project_wizard.py
apps/api/app/tasks/: backfill_fulltext_assets.py  backfill_insights.py  bootstrap_project_setup.py  cleanup.py  cluster_project.py  enrich_video.py  generate_insight_report.py  ingest_discovery.py  ingest_document.py  ingest_documents_handler.py  ingest_filters.py  ingest_papers.py  ingest_patents.py  ingest_project.py  ingest_social_instagram.py  ingest_social_reddit.py  ingest_social_tiktok.py  ingest_social_x.py  ingest_social_youtube.py  ingest_source_asset.py  ingest_utils.py  refresh_project.py  worker.py
apps/api/app/tools/: llm.py  news_perigon.py  papers_arxiv.py  papers_openalex.py  papers_pubmed.py  papers_semantic_scholar.py  patents_lens.py  patents_patentsview.py  search_exa.py  search_tavily.py  social_common.py  social_instagram.py  social_reddit.py  social_tiktok.py  social_x.py  social_youtube.py  video_enrichment.py
apps/api/scripts/: trace_social_relevance.py
apps/api/tests/unit/: test_relevance_filter.py
apps/streamlit/: pyproject.toml
apps/streamlit/app/: _api.py  agent.py  main.py  settings.py  source_cards.py  styles.css
apps/streamlit/app/tools/: ensemble_tiktok_tool.py  open_alex_tool.py
docker/: docker-compose.yml
docs/: raw_output_event.json
scripts/: debug_env.py  debug_raw_db.py  debug_startup.py  debug_tcp.py
tools/: ensemble_tiktok_tool.py  open_alex_tool.py  test_open_alex.py  time_tool.py
